--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   --font-carves: "Carves", sans-serif;
   --color-primary: #5b0a18;
   --color-background: #e9d2b5;
-  --font-italianno: "Italianno", cursive;
+  --font-italianno: "Italianno", sans-serif;
 }
 
 body {
